updated table name to prefix onyx fixed password reset added custom layout file

--- a/config/onyxuser.global.php.dist
+++ b/config/onyxuser.global.php.dist
@@ -11,6 +11,9 @@ return array(
         'welcome_template' => 'onyx-user/email/tpl/welcome-email',
         'welcome_template_double_opt' => 'onyx-user/email/tpl/welcome-email-double',
         'welcome_subject' => 'Welcome to the site',
+        'reset_email_template' => 'onyx-user/email/tpl/reset-email',
+        'token_expire' => '-3 hour',
+        'default_role' => 'guest',
     ),
 );
 
